# MultiAgentSystem

./: .env.example  .gitignore  PR_DESCRIPTION.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/e2e/: agent-flow.spec.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/__tests__/: App.integration.test.tsx  App.test.tsx
frontend/src/features/agents/: AgentFlow.tsx
frontend/src/features/artifacts/: ReportLink.tsx
frontend/src/features/events/: ProfitableItemGrid.tsx  eventReducer.ts  eventStore.ts  selectors.ts  useLiveEventStream.ts
frontend/src/features/runs/: RunControls.tsx  useRunController.ts
frontend/src/lib/: streaming.ts
frontend/src/shared/api/: eventClient.ts  runClient.ts
frontend/src/shared/contracts/: eventContracts.ts
src/uk_resell_adk/: __init__.py  agents.py  app.py  config.py  html_renderer.py  live_events.py  main.py  models.py  tools.py  tracing.py  visualizer_server.py
src/uk_resell_adk/api/: __init__.py  handlers.py
src/uk_resell_adk/application/: __init__.py  run_service.py
src/uk_resell_adk/contracts/: __init__.py  events.py
src/uk_resell_adk/domain/: __init__.py  entities.py
src/uk_resell_adk/infrastructure/: __init__.py  artifact_store.py  event_store.py
src/uk_resell_adk/sources/: __init__.py  base.py  common.py  hlj.py  ninningame.py  surugaya.py  trading_cards.py
tests/: test_agents.py  test_html_renderer.py  test_live_events.py  test_main.py  test_sources.py  test_sources_common.py  test_tools.py  test_tracing.py  test_visualizer_server.py
tests/application/: test_run_service.py
tests/contracts/: test_event_schema.py  test_frontend_event_contract_sync.py
tests/domain/: test_entities.py
tests/integration/: test_artifact_store_security.py  test_back_to_back_runs_stream.py  test_event_store_sequence_reset.py  test_stream_cursor_resume.py
tests/workflow/: test_profitability_stage.py  test_report_stage.py  test_source_stage.py
(+10 files in other folders)
