[project]
name = "uk-resell-adk"
version = "0.1.0"
description = "Google ADK multi-agent system for sourcing, evaluating, and reporting UK resale opportunities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=0.3.0",
  "httpx>=0.27.0",
  "langfuse>=3.0.0",
  "langsmith>=0.1.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src/uk_resell_adk/application --cov=src/uk_resell_adk/domain --cov-report=term-missing --cov-fail-under=85"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "src"
files = [
  "src/uk_resell_adk/application",
  "src/uk_resell_adk/domain",
  "src/uk_resell_adk/api",
  "src/uk_resell_adk/contracts",
]
implicit_reexport = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["uk_resell_adk.tools", "uk_resell_adk.sources.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py311"
